differ between current user and ref to user
In all templates and frontend_routes it needs to be clear which object is the:
1. current logged in user
2. which is a reference to another user (for e.g. editing a user in admin view)

--- a/packages/divbase-api/src/divbase_api/templates/admin_pages/users.html
+++ b/packages/divbase-api/src/divbase_api/templates/admin_pages/users.html
@@ -91,7 +91,7 @@
                                         </button>
                                     </li>
                                     {% endif %}
-                                    {% if user_item.id != user.id %}
+                                    {% if user_item.id != current_user.id %}
                                     <li>
                                         <button class="dropdown-item text-danger" 
                                                 onclick="confirmDelete('{{ user_item.id }}', '{{ user_item.name }}')">
