--- a/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mx-auto">
+        <div class="col-md-12 mx-auto">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h2><i class="bi bi-person-circle me-2"></i>My Profile</h2>
                 <a href="/profile/edit" class="btn btn-primary">
@@ -48,9 +48,9 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
+
+    {% include "components/project_cards.html" %}
 </div>
 {% endblock %}
