--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/register_success.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/register_success.html
@@ -25,7 +25,7 @@
                         </div>
                         
                         <p class="text-muted mb-4">
-                            You can now sign in to your account
+                            Please check your emails for a verification link to activate your account.
                         </p>
                         
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
