--- a/packages/divbase-api/src/divbase_api/templates/components/login_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/login_form.html
@@ -18,6 +18,7 @@
                            id="email" 
                            name="email" 
                            placeholder="Enter your email"
+                           autocomplete="email"
                            value="{{ email or '' }}"
                            required>
                 </div>
@@ -34,6 +35,7 @@
                            id="password" 
                            name="password" 
                            placeholder="Enter your password"
+                           autocomplete="current-password" 
                            required>
                     </button>
                 </div>
