--- a/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
@@ -18,6 +18,7 @@
                            name="name" 
                            placeholder="Enter your full name"
                            value="{{ name or '' }}"
+                           autocomplete="name"
                            required>
                 </div>
             </div>
@@ -34,6 +35,7 @@
                            name="email" 
                            placeholder="Enter your email address"
                            value="{{ email or '' }}"
+                           autocomplete="email"
                            required>
                 </div>
             </div>
@@ -49,6 +51,7 @@
                            id="password" 
                            name="password" 
                            placeholder="Create a password"
+                           autocomplete="new-password"
                            required>
                     </button>
                 </div>
@@ -65,6 +68,7 @@
                            id="confirm_password" 
                            name="confirm_password" 
                            placeholder="Confirm your password"
+                           autocomplete="new-password"
                            required>
                     </button>
                 </div>
