--- a/packages/divbase-api/src/divbase_api/templates/components/resend_verification_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/resend_verification_form.html
@@ -14,6 +14,7 @@
                     value="{{ email or '' }}" 
                     required 
                     placeholder="Enter your email address"
+                    autocomplete="email"
                     class="form-control"
                 >
             </div>
