add password reset route and templates

--- a/packages/divbase-api/src/divbase_api/services/email_templates/src/password_was_reset.mjml
+++ b/packages/divbase-api/src/divbase_api/services/email_templates/src/password_was_reset.mjml
@@ -40,7 +40,7 @@
           Security Alert:
         </mj-text>
         <mj-text font-size="14px" color="#dc2626" padding="0">
-          If you didn't reset your password, please contact us immediately immediately as your account may be compromised.
+          If you didn't reset your password, please contact us immediately as your account may be compromised.
         </mj-text>
       </mj-column>
     </mj-section>
