helper fn for deleting auth cookies on logout

--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
@@ -15,6 +15,7 @@
 
                     <form method="post" action="/auth/reset-password">
                         <input type="hidden" name="token" value="{{ token }}">
+                        <input type="hidden" name="email" value="{{ email }}">
                         
                         <div class="mb-3">
                             <label for="password" class="form-label">New Password</label>
