--- a/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
@@ -11,8 +11,8 @@
                 <a href="/profile/edit" class="btn btn-primary">
                     <i class="bi bi-pencil me-2"></i>Edit Profile
                 </a>
-                <a href="/auth/change-password" class="btn btn-outline-warning">
-                    <i class="bi bi-key me-2"></i>Change Password
+                <a href="/auth/forgot-password" class="btn btn-warning">
+                    <i class="bi bi-key me-2"></i>Reset Password via Email
                 </a>
             </div>
 
