--- a/packages/divbase-api/src/divbase_api/templates/components/footer.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/footer.html
@@ -34,7 +34,7 @@
             <section class="col-xl-5">
                 <h2 class="scilife-footer-titles mb-2">Supported by</h2>
                 <a href="https://kaw.wallenberg.org/en" target="_blank" style="text-decoration: none;">
-                    <img fetchpriority="low" class="scilife-footer-img" src="/static/logos/kaw.webp"
+                    <img fetchpriority="low" class="scilife-footer-img" src="/static/logos/kaw_logo.webp"
                         alt="Knut and Alice Wallenberg Foundation Logo">
                 </a>
                 <a href="https://strategiska.se/en" target="_blank" style="text-decoration: none;">
@@ -42,7 +42,7 @@
                         alt="Swedish Foundation for Strategic Research Logo">
                 </a>
                 <a href="https://www.scilifelab.se/" target="_blank" style="text-decoration: none;">
-                    <img fetchpriority="low" class="scilife-footer-img" src="/static/logos/scilifelab-logo.svg"
+                    <img fetchpriority="low" class="scilife-footer-img" src="/static/logos/scilifelab_logo.svg"
                         alt="SciLifeLab Logo">
                 </a>
             </section>
