--- a/packages/divbase-api/src/divbase_api/templates/components/navbar.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/navbar.html
@@ -20,7 +20,7 @@
                 {% if current_user %}
                 <li class="nav-item">
                     <a class="nav-link scilife-nav-link" href="/projects">
-                        <i class="bi bi-folder me-1"></i>Projects
+                        <i class="bi bi-folder me-1"></i>My Projects
                     </a>
                 </li>
                 {% endif %}
