--- a/packages/divbase-api/src/divbase_api/templates/components/project_cards.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/project_cards.html
@@ -4,8 +4,8 @@
 <div class="row">
     <div class="col-12">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <div>
-                <h2><i class="bi bi-folder2-open2-open me-2"></i>My Projects</h2>
+            <div class="scilife-subsection">
+                <h2><i class="bi bi-folder2-open me-2"></i>My Projects</h2>
                 <p class="text-muted">Projects you're a member of</p>
             </div>
             <div>
@@ -70,9 +70,20 @@
     {% endfor %}
 </div>
 {% else %}
-<div class="text-center py-5">
+<div class="text-center py-5 mb-3">
     <i class="bi bi-folder2-open2-open display-1 text-muted"></i>
     <h4 class="mt-3">No Projects Yet</h4>
     <p class="text-muted">You're not a member of any projects yet.</p>
 </div>
 {% endif %}
+
+
+<div class="row">
+    <div class="col mb-4">
+        <div class="scilife-subsection">
+            <h3>How do I create a new project or be added to a project?</h3> 
+            <p>In order to create a new project on DivBase you need to contact us <a href="/contact">here</a>. </p>
+            <p>If you just need to be added to a pre-existing project you need to ask the manager of the project to add you. If the project manager needs help with this we can help <a href="/contact">here</a>.</p>
+        </div>
+    </div>
+</div>
