--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/register_success.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/register_success.html
@@ -21,7 +21,7 @@
                         
                         <div class="alert alert-warning" role="alert">
                             <i class="bi bi-envelope-check me-2"></i>
-                            <strong>Important:</strong> Please check your email inbox (and spam folder) for a verification link sent to <strong>{{ email }}</strong>.
+                            <strong>Important:</strong> Please check your email inbox (and spam folder) for a verification link sent to <em>{{ email }}</em>.
                             The email will be sent from <em>{{ from_email }}</em>.
                         </div>
                         
@@ -31,7 +31,7 @@
                         
                         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                             <a href="/" class="btn btn-outline-secondary">
-                                <i class="bi bi-house me-2"></i>Go to home page
+                                <i class="bi bi-house me-2"></i>Go to the home page
                             </a>
                         </div>
                     </div>
