--- a/packages/divbase-api/src/divbase_api/templates/components/project_cards.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/project_cards.html
@@ -1,6 +1,4 @@
 {# Project Cards Component, used in projects view and user profile views #}
-
-
 <div class="row">
     <div class="col-12">
         <div class="d-flex justify-content-between align-items-center mb-4">
@@ -87,7 +85,7 @@
     <div class="col mb-4">
         <div class="scilife-subsection">
             <h3>How can I create a new project or be added to a project?</h3> 
-            <p>In order to create a new project on DivBase you need to contact us <a href="/contact">here</a>. </p>
+            <p>In order to create a new project on DivBase you need to <a href="/contact">contact us</a>.</p>
             <p>If you just need to be added to a pre-existing project you need to ask the manager of the project to add you. If the project manager needs help with this <a href="/contact">we can help</a>.</p>
         </div>
     </div>
