--- a/packages/divbase-api/src/divbase_api/templates/components/navbar.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/navbar.html
@@ -30,18 +30,18 @@
                         <i class="bi bi-person-circle me-1"></i>{{ current_user.email }}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/profile">
+                        <li><a class="dropdown-item scilife-nav-dropdown-item" href="/profile">
                             <i class="bi bi-person me-2"></i>Profile
                         </a></li>
                         {% if current_user.is_admin %}
-                        <li><a class="dropdown-item" href="/admin">
+                        <li><a class="dropdown-item scilife-nav-dropdown-item" href="/admin">
                             <i class="bi bi-gear me-2"></i>Admin Panel
                         </a></li>
                         {% endif %}
                         <li><hr class="dropdown-divider"></li>
                         <li>
                             <form method="post" action="/auth/logout" class="d-inline">
-                                <button type="submit" class="dropdown-item">
+                                <button type="submit" class="dropdown-item scilife-nav-dropdown-item">
                                     <i class="bi bi-box-arrow-right me-2"></i>Logout
                                 </button>
                             </form>
