more consistent frontend design

--- a/packages/divbase-api/src/divbase_api/templates/components/footer.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/footer.html
@@ -11,6 +11,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About DivBase</a></li>
                     <li><a href="/about/sv">Information på svenska</a></li>
+                    <li><a href="/api/v1/docs">API Docs</a></li>
                     <li><a href="/citation">Cite us</a></li>
                     <li><a href="/contact">Contact us</a></li>               
                     <li><a href="/faqs">FAQ</a></li>
