--- a/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
@@ -3,7 +3,7 @@
         <div class="card shadow-sm">
             <div class="card-header">
                 <div class="text-center scilife-subsection mt-2 mb-4">
-                    <h2>Register with DivBase </h2>
+                    <h2>Create an account </h2>
                     <p class="text-muted">DivBase is primarily for researchers in Sweden, but international collaborators are welcome to join projects led by a researcher with Swedish affiliation.</p>
                 </div>
             </div>
