--- a/packages/divbase-api/src/divbase_api/templates/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/index.html
@@ -5,17 +5,22 @@
 
 
 {% block content %}
-
-<h1>DivBase Home page</h1>
-
-<p>Welcome to DivBase</p>
-
-{% if current_user %}
-    <p>Hello, {{ current_user.email }}!</p>
-    <p>You're logged in!</p>
-{% else %}
-    <p>You're not logged in.</p>
-{% endif %}
-
-
+<div class="container">
+    <div class="row justify-content-between mb-4">
+        <div class="col-md-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="scilife-subsection">
+                    <h2><i class="bi bi-database-fill me-2"></i>Welcome to DivBase</h2>
+                    {% if current_user %}
+                    <p>Hello, {{ current_user.email }}!</p>
+                    <p>You're logged in!</p>
+                    {% else %}
+                        <p>Welcome, guest user.</p>
+                        <p>You're not logged in.</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
