remove all inline JS from HTML

--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
@@ -75,15 +75,8 @@
     </div>
 </div>
 
-<script>
-// validate password + confirm password same
-document.getElementById('confirm_password').addEventListener('input', function() {
-    const password = document.getElementById('password').value;
-    if (this.value !== password) {
-        this.setCustomValidity('Passwords do not match');
-    } else {
-        this.setCustomValidity('');
-    }
-});
-</script>
+{% endblock %}
+
+{% block custom_scripts %}
+<script src="/static/js/reset_password.js"></script>
 {% endblock %}
