Remove /auth/ in frontend URLs

--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/email_verification.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/email_verification.html
@@ -8,7 +8,7 @@
         {% include "components/resend_verification_form.html" %}
     
         <div class="mt-4">
-            <a href="/auth/register" class="btn btn-secondary">Haven't registered yet? Register here</a>
+            <a href="/register" class="btn btn-secondary">Haven't registered yet? Register here</a>
         </div>
     </div>
 </div>
