--- a/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
@@ -15,7 +15,7 @@
                     <a href="/profile/edit" class="btn btn-primary me-2">
                         <i class="bi bi-pencil me-2"></i>Edit Profile
                     </a>
-                    <a href="/auth/forgot-password" class="btn btn-warning">
+                    <a href="/forgot-password" class="btn btn-warning">
                         <i class="bi bi-key me-2"></i>Request Password Reset Email
                     </a>
                 </div>
