--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/reset_password.html
@@ -13,7 +13,7 @@
                         <p class="text-muted">Enter your new password for {{ email }}</p>
                     </div>
 
-                    <form method="post" action="/auth/reset-password">
+                    <form method="post" action="/reset-password">
                         <input type="hidden" name="token" value="{{ token }}">
                         <input type="hidden" name="email" value="{{ email }}">
                         
@@ -65,7 +65,7 @@
 
                     <div class="text-center">
                         <p class="text-muted mb-2">Remember your password?</p>
-                        <a href="/auth/login" class="btn btn-outline-primary">
+                        <a href="/login" class="btn btn-outline-primary">
                             <i class="bi bi-box-arrow-in-right me-2"></i>Back to Login
                         </a>
                     </div>
