--- a/packages/divbase-api/src/divbase_api/templates/components/request_password_reset_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/request_password_reset_form.html
@@ -6,7 +6,7 @@
             <p class="text-muted">Enter your email address and we'll send you a link to reset your password</p>
         </div>
 
-        <form method="post" action="/auth/forgot-password">
+        <form method="post" action="/forgot-password">
             <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
                 <div class="input-group">
