link to mkdocs site from divbase site

--- a/packages/divbase-api/src/divbase_api/templates/components/navbar.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/navbar.html
@@ -13,8 +13,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link scilife-nav-link" href="/user-guide">
-                        <i class="bi bi-book me-1"></i>User Guide
+                    <a class="nav-link scilife-nav-link" href="{{ mkdocs_site_url }}" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-book me-1"></i>Documentation
                     </a>
                 </li>
                 {% if current_user %}
